# sextant-mcp

./: .gitignore  .mcp.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: backfill-v0.1.5-trigger.md  backfill-v0.1.6-trigger.md  backfill-v0.1.7-trigger.md  backfill-v0.1.8-trigger.md  dispatch-missing-binary-builds-trigger.md
.github/workflows/: auto-backfill-root-release.yml  backfill-v0.1.5.yml  backfill-v0.1.6.yml  backfill-v0.1.7.yml  backfill-v0.1.8.yml  ci.yml  dispatch-missing-binary-builds.yml  docs.yml  release-please.yml  release.yml  sextant-grade.yml  vscode-publish.yml
.sextant/: config.toml
action/: README.md  action.yml
action/scripts/: install-sextant.sh  post-review-inline.sh  post-review.sh
crates/sextant-cli/: Cargo.toml
crates/sextant-cli/src/: main.rs
crates/sextant-cli/src/commands/: format.rs  grade.rs  init.rs  mod.rs  rules.rs
crates/sextant-cli/src/commands/format/: markdown.rs  mod.rs  review.rs  sarif.rs  test_fixtures.rs
crates/sextant-cli/src/commands/init/: mod.rs  templates.rs
crates/sextant-cli/tests/: grade_diff.rs  grade_files.rs  pr_mode.rs  rules_cmds.rs  typescript_pack_e2e.rs
crates/sextant-cli/tests/snapshots/: grade_files__grade_files_report.snap
crates/sextant-config/: Cargo.toml
crates/sextant-config/src/: lib.rs
crates/sextant-core/: Cargo.toml
crates/sextant-core/src/: baseline.rs  evaluator.rs  finding.rs  lib.rs  report.rs  rule.rs  source.rs  verdict.rs
crates/sextant-diff/: Cargo.toml  build.rs
crates/sextant-diff/src/: lib.rs  lib_tests.rs
crates/sextant-engine/: Cargo.toml
crates/sextant-engine/src/: cross_file_dup_tests.rs  judge_setup.rs  lib.rs  lib_tests.rs  pr.rs  synthesize.rs  test_helpers.rs
crates/sextant-judge/: Cargo.toml
crates/sextant-judge/src/: cache.rs  fake.rs  lib.rs  providers.rs
crates/sextant-lang/: Cargo.toml
crates/sextant-lang/src/: clones.rs  clones_tests.rs  complexity.rs  lib.rs  parser.rs  ranges.rs  test_witness.rs
crates/sextant-lang/src/test_witness/: js.rs
crates/sextant-lsp/: Cargo.toml
crates/sextant-lsp/src/: backend.rs  codeaction.rs  convert.rs  grade.rs  hover.rs  main.rs  state.rs  workspace.rs
crates/sextant-mcp/: Cargo.toml
crates/sextant-mcp/src/: handler.rs  http.rs  main.rs  protocol.rs  tools.rs
crates/sextant-mcp/tests/: smoke.rs
crates/sextant-rules/: Cargo.toml
crates/sextant-rules/rules/builtin/complexity/: cyclomatic.md  nesting.md
crates/sextant-rules/rules/builtin/duplication/: tokens.md
crates/sextant-rules/rules/builtin/size/: file-length.md  fn-length.md  param-count.md
crates/sextant-rules/rules/builtin/tests/: pub-fn-untested.md
crates/sextant-rules/src/: ast_rule.rs  complexity.rs  duplication.rs  duplication_tests.rs  fetcher.rs  fetcher_tests.rs  file_length.rs  fn_length.rs  function_walker.rs  lib.rs  lib_tests.rs  llm_rule.rs  loader.rs  loader_tests.rs  lock.rs  lock_tests.rs  merge.rs  param_count.rs  patch.rs  pub_fn_test.rs  pub_fn_test_tests.rs  regex_rule.rs
crates/sextant-rules/tests/: typescript_pack.rs  typescript_pack_extras.rs  typescript_pack_more.rs
crates/sextant-rules/tests/common/: mod.rs
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/components/: Mermaid.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/action/: baseline-cache.md  forks-and-tokens.md  index.md  inputs.md  outputs.md
docs/src/content/docs/architecture/: crates.md  data-model.md  index.mdx
docs/src/content/docs/cli/: grade.md  index.md  init.md  rules.md
docs/src/content/docs/concepts/: evaluator.md  finding.md  index.md  report.md  rule.md  scopes.md  verdict.md
docs/src/content/docs/configuration/: complexity.md  duplication.md  index.md  judge.md  size.md  verdict.md
docs/src/content/docs/editor/: index.md  other-editors.md  vscode.md
docs/src/content/docs/getting-started/: init.md  installation.md  quickstart.md
docs/src/content/docs/mcp/: claude-code.md  claude-desktop.md  index.md
docs/src/content/docs/mcp/tools/: explain-rule.md  get-config.md  grade-diff.md  grade-files.md  list-rules.md
docs/src/content/docs/packs/: authoring.md  index.md  installing.md  typescript.md
docs/src/content/docs/plugin/: commands.md  enforcing-mode.md  hooks.md  index.md  precommit-hook.md  skills.md
docs/src/content/docs/rules/: authoring.md  index.md
docs/src/content/docs/rules/builtin/: complexity-cyclomatic.md  complexity-nesting.md  duplication-tokens.md  size-file-length.md  size-fn-length.md  size-param-count.md  tests-pub-fn-untested.md
docs/src/styles/: custom.css
editors/vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
editors/vscode/src/: client.ts  extension.ts  locate.ts
editors/vscode/test/: lc-mock.ts  vscode-mock.ts
packs/typescript/: README.md
packs/typescript/rules/: no-ambient-module-shim.md  no-any.md  no-as-cast.md  no-branded-types.md  no-empty-interface.md  no-eval.md  no-function-type.md  no-implicit-any-field.md  no-property-bags.md  no-type-assertion.md  no-unknown.md  no-var.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: sextant-explain.md  sextant-grade.md  sextant-init.md
plugin/hooks/: post-edit-grade.sh  pre-commit.sh  session-start.sh  stop-enforce-grade.sh
plugin/skills/sextant-author-rule/: SKILL.md
plugin/skills/sextant-grade/: SKILL.md
plugin/skills/sextant-self-correct/: SKILL.md
src/: lib.rs
