[package]
name = "sextant-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sextant CLI"

[[bin]]
name = "sextant"
path = "src/main.rs"

[dependencies]
sextant-core = { workspace = true }
sextant-rules = { workspace = true }
sextant-engine = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = { version = "1", features = ["json"] }

[lints]
workspace = true
