[package]
name = "sextant-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config loader for Sextant"

[dependencies]
sextant-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
