[package]
name = "sextant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for the Sextant code grader"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }

[lints]
workspace = true
