[package]
name = "sextant-diff"
version = "0.1.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Git diff acquisition for Sextant"

[dependencies]
git2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
