[package]
name = "sextant-judge"
version = "0.1.13"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM-as-judge providers + cache for Sextant"

[dependencies]
sextant-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
