[package]
name = "sextant-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-sitter parsers and queries for Sextant"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
