[package]
name = "sextant-lang"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-sitter parsers and queries for Sextant"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
