[package]
name = "sextant-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sextant MCP server (stdio JSON-RPC)"

[[bin]]
name = "sextant-mcp"
path = "src/main.rs"

[dependencies]
sextant-engine = { workspace = true }
sextant-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
