[package]
name = "sextant-mcp"
version = "0.1.18"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sextant MCP server (stdio + HTTP JSON-RPC)"

[[bin]]
name = "sextant-mcp"
path = "src/main.rs"

[dependencies]
sextant-engine = { workspace = true }
sextant-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", default-features = false, features = ["util"] }

[lints]
workspace = true
