[package]
name = "sextant-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in rule evaluators for Sextant"

[dependencies]
sextant-core = { workspace = true }
sextant-config = { workspace = true }

[lints]
workspace = true
