[package]
name = "sextant-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in rule evaluators for Sextant"

[dependencies]
sextant-core = { workspace = true }
sextant-config = { workspace = true }
sextant-lang = { workspace = true }
sextant-judge = { workspace = true }
gray_matter = { workspace = true }
rust-embed = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
