[package]
name = "sextant-rules"
version = "0.1.13"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in rule evaluators for Sextant"

[dependencies]
sextant-core = { workspace = true }
sextant-config = { workspace = true }
sextant-lang = { workspace = true }
sextant-judge = { workspace = true }
gray_matter = { workspace = true }
rust-embed = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
git2 = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
